# wolf_ylo2_interface

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml  process.md  rviz_config.rviz
debs/: peak-linux-driver-ubuntu-18.04_8.12.0-1_amd64.deb  peak-linux-driver-ubuntu-20.04_8.12.0-1_amd64.deb
include/moteus_pcan/: moteus_pcan_controller.h  moteus_pcan_interface.h
include/wolf_ylo2_interface/: myahrs+_imu.hpp  ylo2_robot_hw.hpp  ylo2_ros_control.hpp
launch/: run.launch  test_hardware.launch
moteus_driver/: CMakeLists.txt
moteus_driver/include/moteus_driver/: CANDevice.h  PCANDevice.h  YloTwoPcanToMoteus.hpp  moteus_pcan_controller.h  moteus_pcan_interface.h  moteus_pcan_motor.h
moteus_driver/src/: CANDevice.cpp  PCANDevice.cpp  YloTwoPcanToMoteus.cpp  moteus_pcan_controller.cpp  moteus_pcan_interface.cpp  moteus_pcan_motor.cpp  utils.cpp
myahrs+/: README.md  makefile  myahrs+_elpimous.cpp  myahrs+_imu.hpp  myahrs+_node.cpp
myahrs+_imu/myahrs+/: README.md  myahrs+_elpimous.cpp
myahrs_driver/: CMakeLists.txt
myahrs_driver/launch/: myahrs_driver.launch
params/: joint_state_publisher.yaml  joint_trajectory_controller.yaml  joint_trajectory_controller_old.yaml
src/: moteus_pcan_controller.cpp  moteus_pcan_interface.cpp  moteus_pcan_motor.cpp  ylo2_imu_node.cpp  ylo2_robot_hw.cpp  ylo2_ros_control.cpp  ylo2_ros_node.cpp
temp/imu/: readme.txt
temp/moteus_controller/: moteus_protocol.h  readme.txt
ylo2_moteus/: CMakeLists.txt  MEMOS_pour_moi.md  README.md  infos_to_share.md  package.xml
ylo2_moteus/include/moteus_pcan/: moteus_pcan_controller.h  moteus_pcan_interface.h  moteus_pcan_motor.h
ylo2_moteus/src/: ylo2_moteus_node.cpp
ylo2_moteus/src/moteus_pcan/: moteus_pcan_controller.cpp  moteus_pcan_interface.cpp  moteus_pcan_motor.cpp
ylo2_moteus_controller/include/: moteus_controller.hpp
